--- a/shop/templates/shop_page.html
+++ b/shop/templates/shop_page.html
@@ -93,7 +93,7 @@
       <h1>BOULEVARD MALL Categories</h1>
       <nav>
         <ul>
-          <li><a href="/home">Home</a></li>
+          <li><a href="{% url 'homepage' %}">Home</a></li>
           <li><a href="">Shop</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
@@ -107,21 +107,21 @@
           <img src="https://imgs.search.brave.com/0dfyPjcV37vRS9dU88WbqVf1AVVV4lKHu0TVGELf9dI/rs:fit:850:800:1/g:ce/aHR0cHM6Ly93d3cu/Z291cm1ldGFkcy5j/b20vd3AtY29udGVu/dC91cGxvYWRzLzIw/MjAvMDUvZ3JvY2Vy/eS1kZWxpdmVyeS10/YXJnZXRpbmctc3F1/YXJlLmpwZw" alt="Category 1">
           <h3>GROCERIES</h3>
           <p>This store is a retail establishment that primarily sells food and household items for consumers to purchase for their everyday needs.</p>
-          <a href="grocery/" class="cta">Shop Now</a>
+          <a href="{% url 'grocery_shop' %}" class="cta">Shop Now</a>
         </div>
         
         <div class="category">
           <img src="https://imgs.search.brave.com/QdPuX_XfArYnBLxIupN-ioUKDzafb2W2yaZUoME5UGE/rs:fit:800:800:1/g:ce/aHR0cHM6Ly9nb3Nt/YXJ0d2F5LmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMjAyMS8w/NC9jZWxsLXBob25l/cy5wbmc" alt="Category 2">
           <h3>MOBILE PHONES</h3>
           <p>A mobile store is a retail establishment that primarily sells mobile phones and related accessories for consumers to purchase.</p>
-          <a href="mobilephone/" class="cta">Shop Now</a>
+          <a href="{% url 'phone_shop' %}" class="cta">Shop Now</a>
         </div>
         
         <div class="category">
           <img src="https://imgs.search.brave.com/0frY6Cxy66Y0ijxTG4TAbVaE4ei1VRwiEuGMCuSfr48/rs:fit:800:800:1/g:ce/aHR0cHM6Ly93d3cu/Z2llbGwuY29tL21l/ZGlhL2NhdGFsb2cv/cHJvZHVjdC9jYWNo/ZS8xL3RodW1ibmFp/bC84MDB4ODAwLzlk/Zjc4ZWFiMzM1MjVk/MDhkNmU1ZmI4ZDI3/MTM2ZTk1LzAvNC8w/NDQ5NC0xLmpwZw" alt="Category 3">
           <h3>MAKEUP</h3>
           <p>Makeup category in a store refers to a range of cosmetic products that are designed to enhance or alter the appearance of the face, eyes, lips, and skin.</p>
-          <a href="makeup/" class="cta">Shop Now</a>
+          <a href="{% url 'makeup_shop' %}" class="cta">Shop Now</a>
         </div>
         <div class="category">
             <img src="https://imgs.search.brave.com/4-YM89K5CbzgQeTCmbgAHYsLfX2ePaSX2tRqn2zbkzc/rs:fit:667:800:1/g:ce/aHR0cHM6Ly93d3cu/cmVmaW5lcnkyOS5j/b20vaW1hZ2VzLzg3/MDE0ODkuanBnP2Ny/b3A9NTo2" alt="Category 4">
