--- a/shop/templates/shop_page.html
+++ b/shop/templates/shop_page.html
@@ -127,20 +127,20 @@
             <img src="https://imgs.search.brave.com/4-YM89K5CbzgQeTCmbgAHYsLfX2ePaSX2tRqn2zbkzc/rs:fit:667:800:1/g:ce/aHR0cHM6Ly93d3cu/cmVmaW5lcnkyOS5j/b20vaW1hZ2VzLzg3/MDE0ODkuanBnP2Ny/b3A9NTo2" alt="Category 4">
             <h3>SKINCARE</h3>
             <p>Skincare category in an online store refers to a range of products that are designed to improve the health and appearance of the skin, such as cleansers, moisturizers, and treatments.</p>
-            <a href="#" class="cta">Shop Now</a>
+            <a href="{% url 'skin-care' %}" class="cta">Shop Now</a>
         </div>
 
         <div class="category">
             <img src="https://imgs.search.brave.com/1BYH1CPukMaGfoMKyTvjubNRKDdMS68AiOGe43zF4Jg/rs:fit:1200:1200:1/g:ce/aHR0cHM6Ly9maW1n/cy5uZXQvcGhvdG9n/cmFtL3AxMjAwL3Nr/L3ZnL09PZ0dzMEd1/QW5xV1VaUlAuanBn" alt="Category 5">
             <h3>PERFUMES</h3>
             <p>Perfume category in an online store refers to a collection of fragrances, scents and aromas, that are designed to enhance the wearer's personal scent and mood.</p>
-            <a href="#" class="cta">Shop Now</a>
+            <a href="{% url 'perfume' %}" class="cta">Shop Now</a>
         </div>
         <div class="category">
             <img src="https://imgs.search.brave.com/v0hgcNxZ_f-HKoohCINGBlg-p6mrYuSaiT3WPjYc6GE/rs:fit:1200:1200:1/g:ce/aHR0cDovL2ltYWdl/My5tb3V0aHNodXQu/Y29tL2ltYWdlcy9p/bWFnZXNwLzkyNTcx/MjA3M3MuanBn" alt="Category 6">
             <h3>HOME APPLIANCES</h3>
             <p>Home appliance category in an online store refers to a range of electrical devices and machines that are designed to make daily household tasks more convenient, efficient and comfortable, such as washing machines, refrigerators, and air conditioners.</p>
-            <a href="#" class="cta">Shop Now</a>
+            <a href="{% url 'home-appliances' %}" class="cta">Shop Now</a>
         </div>
         
         
