add some new files

--- a/shop/templates/grocery.html
+++ b/shop/templates/grocery.html
@@ -96,9 +96,7 @@ main {
 
       <ul class="product-listing">
         <li class="product-item">
-          {% if value.image %}
-            <img src="{{ value.image.url }}" alt="Image" style="max-width: 70%; max-height:400px;">
-          {% endif %}
+          <img src="product-1.jpg" alt="Product 1">
           <h2>{{value.product_name}}</h2>
           <p class="product-description">{{value.description}}</p>
           <p class="product-price">{{value.price}}</p>
