--- a/shop/templates/makeup.html
+++ b/shop/templates/makeup.html
@@ -99,7 +99,7 @@ main {
           <img src="product-1.jpg" alt="Product 1">
           <h2>{{value.product_name}}</h2>
           <p class="product-description">{{value.description}}</p>
-          <p class="product-price">${{value.price}}</p>
+          <p class="product-price">{{value.price}}</p>
         </li>
 
         {% endfor %}
