--- a/templates/shop.html
+++ b/templates/shop.html
@@ -51,8 +51,8 @@
                         <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="" class="nav-item nav-link">Login</a>
-                        <a href="" class="nav-item nav-link">Register</a>
+                        <a href="{% url 'login' %}" class="nav-item nav-link">Login</a>
+                        <a href="{% url 'register' %}" class="nav-item nav-link">Register</a>
                     </div>
                 </div>
             </nav>
